--- a/public/style.css
+++ b/public/style.css
@@ -34,7 +34,7 @@ a,
 a:link,
 a:visited,
 a:active {
-  color: #3ca9e2;
+  color: #0f618d;
   -webkit-transition: all 0.2s ease;
   transition: all 0.2s ease;
 }
@@ -45,7 +45,7 @@ a:visited:focus,
 a:visited:hover,
 a:active:focus,
 a:active:hover {
-  color: #329dd5;
+  color:  #0f618d;
   -webkit-transition: all 0.2s ease;
   transition: all 0.2s ease;
 }
