--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,7 @@ body {
   color: #2b3e51;
 }
 
-h2 {
+h2,h3,h4,h5 {
   font-weight: 300;
   text-align: center;
 }
@@ -26,7 +26,7 @@ label {
 div[id = "image"] {
   display: flex;
   justify-content: center;
-  padding: 10px;
+  padding: 5px;
 }
 
 
@@ -77,12 +77,14 @@ input {
 input[id = "logout"]{
   display: block;
   box-sizing: border-box;
-  width: 10%;
+  width: 25%;
   outline: none;
-  margin-left: 90%;
-  height: 60px;
-  line-height: 60px;
+  margin-left: 85%;
+  height: 40px;
+  line-height: 40px;
   border-radius: 4px;
+  text-align: center;
+  
 }
 
 input[type="text"],
@@ -215,11 +217,12 @@ th {
 }
 
 th small {
-  font-size: 9px; 
+  font-size: 6px; 
 }
 
 td, th {
   text-align: left;
+  font-size: 18px; 
 }
 
 a {
@@ -284,7 +287,6 @@ table tr td:first-of-type a[href$=".css"] {
 
 /* docs */
 table tr td:first-of-type a[href$=".doc"],
-table tr td:first-of-type a[href$=".pdf"],
 table tr td:first-of-type a[href$=".odt"],
 table tr td:first-of-type a[href$=".docx"],
 table tr td:first-of-type a[href$=".ppt"],
