--- a/views/partials/uploadedFiles.ejs
+++ b/views/partials/uploadedFiles.ejs
@@ -10,7 +10,7 @@
     <div id="login-form-wrap">
         <div id="image"><img src="/logo.png" alt="DRDO Logo" width="100" height="100"></div>
         <h3>DESIDOC e-Resource Sharing</h3>
-        <h5>Files available to download for <%= user.lab %>
+        <h5>Files uploaded by <%= user.lab %>
         </h5>
         <form id="login-form" action="/logout" method="post"> <input type="submit" id="logout" value="Logout"></form>
         <table class="sortable" id="filesTable">
