--- a/views/partials/uploadedFiles.ejs
+++ b/views/partials/uploadedFiles.ejs
@@ -10,14 +10,10 @@
     <div id="login-form-wrap">
         <div id="image"><img src="/logo.png" alt="DRDO Logo" width="100" height="100"></div>
         <h3>DESIDOC e-Resource Sharing</h3>
-        <h4 style="color:greenyellow;"><%=successMessage%></h4>
+        <h4 style="color:rgb(48, 196, 48);"><%=successMessage%></h4>
         <h5>Files uploaded by <%= user.lab %>
         </h5>
-        <div id="container">
-            <div id="left"><form id="login-form" action="/upload" method="get"> <input type="submit" id="upload" value="Upload"></form></div>
-            <div id="middle"><form id="login-form" action="/filesJS" method="get"> <input type="submit" id="download" value="Download"></form></div>
-            <div id="right">  <form id="login-form" action="/logout" method="post"> <input type="submit" id="logout1" value="Logout"></form></div>
-        </div>
+         <form id="login-form" action="/logout" method="post"> <input type="submit" id="logout" name = "destination" value="upload"></form>
         <table class="sortable" id="filesTable">
             <thead>
                 <tr>
