Sub directory  listing beautification

--- a/public/style.css
+++ b/public/style.css
@@ -490,11 +490,16 @@ li a[id ="directory"] {
   margin: auto;
   padding: 8px 8px;
   text-decoration: none;
+  border-right: 1px solid #bbb;
 }
 
 /* Change the link color to #111 (black) on hover */
 li a[id = "directory"]:hover {
   background-color: #111;
+}
+
+li:last-child {
+  border-right: none;
 }
 
 .active {
